# Python-interpreter

./: README.md  ptipython.sh
Ptipython/: ast.ml  dune  dune-project  eval.ml  lexer.mll  parser.mly  ptipython.ml  runtime.ml  tests.sh
Ptipython/tests/: 2_fun_no_arg.py  2_fun_no_arg.txt  README.md  add.py  add.txt  and.py  comprehension.py  comprehension.txt  concat_lst.py  concat_lst.txt  concat_string.py  concat_string.txt  div.py  div.txt  else.py  else.txt  eq.py  eq.txt  eq_bool.py  fib.py  fib.txt  for.py  fun_1_arg.py  fun_1_arg.txt  fun_def_deux_fois.py  fun_multi_arg.py  fun_multi_arg.txt  fun_no_arg.py  fun_no_arg.txt  fun_return.py  fun_return.txt  ge.py  ge.txt  geq.py  geq.txt  if.py  if.txt  le.py  le.txt  len.py  (+57 more)
